dev container improvements

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,8 @@
     "python.pythonPath": "python3",
     "terminal.integrated.commandsToSkipShell": [
         "workbench.action.quickOpen"
+    ],
+    "cSpell.words": [
+        "rslave"
     ]
 }
