--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -52,14 +52,15 @@
     "runArgs": [
         "--privileged",
         "--net=host",
-        "-v=${localEnv:HOME}/.ssh:/root/.ssh",
-        "-v=${localEnv:HOME}/.bashrc_dev:/root/.bashrc",
-        "-v=${localEnv:HOME}/.inputrc:/root/.inputrc"
     ],
     "mounts": [
         // map in home directory - not strictly necessary but may be useful
-        // "source=${localEnv:HOME},destination=${localEnv:HOME},type=bind,consistency=cached,bind-propagation=rslave,z"
+        // "source=${localEnv:HOME},destination=${localEnv:HOME},type=bind,consistency=cached,bind-propagation=rslave"
+        "type=bind,source=${localEnv:HOME}/.ssh,destination=/root/.ssh,bind-propagation=rslave",
+        "type=bind,source=${localEnv:HOME}/.bashrc_dev,destination=/root/.bashrc,bind-propagation=rslave",
+        "type=bind,source=${localEnv:HOME}/.inputrc,destination=/root/.inputrc,bind-propagation=rslave",
+        "type=bind,source=${localEnv:HOME}/.bash_history,destination=/root/.bash_history,bind-propagation=rslave",
     ],
-    "workspaceMount": "source=${localWorkspaceFolder},target=/workspace,type=bind",
+    "workspaceMount": "source=${localWorkspaceFolder},target=/workspace,type=bind,bind-propagation=rslave",
     "workspaceFolder": "/workspace"
 }
